--- a/src/app/user-products/components/product-view/product-view.component.html
+++ b/src/app/user-products/components/product-view/product-view.component.html
@@ -1,6 +1,6 @@
 <mat-card class="product-view-card">
   <div class="card-img-container">
-    <img mat-card-image src="{{product.imageUrl}}" alt="Photo of a product">
+    <img mat-card-image src="{{product.imageUrls[0]}}" alt="Photo of a product">
   </div>
   <mat-card-header>
     <div class="container-info">
