--- a/src/app/admin-products/pages/products-management/products-management.component.html
+++ b/src/app/admin-products/pages/products-management/products-management.component.html
@@ -42,7 +42,7 @@
       <!-- Name Column -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
-        <td mat-cell *matCellDef="let row"> {{row.category}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.category.name}} </td>
       </ng-container>
 
       <!-- Fruit Column -->
