fix: fix review and wishlist

--- a/src/app/public/pages/user-page/wishlist/wishlist.component.css
+++ b/src/app/public/pages/user-page/wishlist/wishlist.component.css
@@ -101,7 +101,9 @@
   background-color: #003785;
 }
 
-
+.remove-cart{
+  background-color: #FF8082 ;
+}
 .empty-section{
   width: 100%;
   display: grid;
