--- a/src/app/review-product/components/list-reviews/list-reviews.component.html
+++ b/src/app/review-product/components/list-reviews/list-reviews.component.html
@@ -1,8 +1,14 @@
     @for (review of reviewDetails; track review.id){
-      <div style="margin: 25px 0; width: 100%;padding: 5px" >
+      <div style="margin: 25px 0; width: 100%;padding: 15px;border-top:1px solid black;" >
         <div style="display: flex;justify-content: space-between">
           <p style="font-weight: 550;font-size: 16px" class="review-user">{{ review.userName}}</p>
-          <span class="review-rating" style="margin-right: 10px">{{review.rating}}</span>
+          <div class="rating-stars">
+            <mat-icon *ngFor="let star of stars; let i = index"
+                      [ngClass]="{'selected': i < review.rating}">
+              {{ i < review.rating ? 'star' : 'star_border' }}
+            </mat-icon>
+          </div>
+<!--          <span class="review-rating" style="margin-right: 10px">{{review.rating}}</span>-->
         </div>
         <div class="review-content">
           <p style="font-size: 14px">
