--- a/src/app/admin-products/components/create-and-edit-product/create-and-edit-product.component.css
+++ b/src/app/admin-products/components/create-and-edit-product/create-and-edit-product.component.css
@@ -204,12 +204,14 @@ mat-card-header{
   height: 100%;
   width: 100%;
   border-radius: 10px;
+  display: grid;
+  place-items: center;
 }
 
 .files-container_case-2 .image-preview img{
   object-fit: contain;
-  max-height: 100%;
-  max-width: 100%;
+  height: 200px;
+  width: 200px;
 }
 
 
