--- a/src/app/user-products/components/user-product-detail/user-product-detail.component.html
+++ b/src/app/user-products/components/user-product-detail/user-product-detail.component.html
@@ -55,30 +55,37 @@
         <div><span style="font-weight: bold">Description:</span><p>{{productData.description}}</p></div>
       </div>
 
-      <section class="review-section" style="display: flex;flex-direction: column">
-        <p style="font-weight: 600;font-size: 20px;align-self: start;margin-top: 5px;margin-bottom: 15px;height: auto">Reviews about the product</p>
-        <div class="new-review-container" style="display: flex; flex-direction: column; width: 100%;">
-          <mat-form-field appearance="outline">
-            <mat-label>Write your review</mat-label>
-            <textarea matInput class="new-review-input" [(ngModel)]="review.content"></textarea>
-          </mat-form-field>
-          <div style="display: flex; justify-content: space-between; align-items: start;">
-            <div class="rating-stars-container" style="display: flex; gap: 5px; align-items: center;">
-              <div class="rating-stars">
-                <mat-icon *ngFor="let star of stars; let i = index"
-                          (click)="rate(i + 1)"
-                          [ngClass]="{'selected': i < rating}">
-                  {{ i < rating ? 'star' : 'star_border' }}
-                </mat-icon>
-              </div>
-            </div>
-            <button mat-button color="accent" class="submit-review-button" style="align-self: start;" (click)="makeReview()">Submit</button>
 
-          </div>
-<!--          <input type="text" class="new-review-input" placeholder="Write your review..." />-->
-        </div>
-        <app-list-reviews  style="width: 100%"/>
-      </section>
+        <section class="review-section" style="display: flex;flex-direction: column">
+          <p style="font-weight: 600;font-size: 20px;align-self: start;margin-top: 5px;margin-bottom: 15px;height: auto">Reviews about the product</p>
+          @if(isSignedIn){
+            <div class="new-review-container" style="display: flex; flex-direction: column; width: 100%;">
+              <mat-form-field appearance="outline">
+                <mat-label>Write your review</mat-label>
+                <textarea matInput class="new-review-input" [(ngModel)]="review.content"></textarea>
+              </mat-form-field>
+              <div style="display: flex; justify-content: space-between; align-items: start;">
+                <div class="rating-stars-container" style="display: flex; gap: 5px; align-items: center;">
+                  <div class="rating-stars">
+                    <mat-icon *ngFor="let star of stars; let i = index"
+                              (click)="rate(i + 1)"
+                              [ngClass]="{'selected': i < rating}">
+                      {{ i < rating ? 'star' : 'star_border' }}
+                    </mat-icon>
+                  </div>
+                </div>
+                <button class="submit-review-button" style="align-self: start;" (click)="makeReview()">Submit</button>
+
+              </div>
+              <!--          <input type="text" class="new-review-input" placeholder="Write your review..." />-->
+            </div>
+
+          }
+
+          <app-list-reviews  style="width: 100%"/>
+        </section>
+
+
     </section>
   </section>
 
