--- a/src/app/iam/pages/sign-in/sign-in.component.html
+++ b/src/app/iam/pages/sign-in/sign-in.component.html
@@ -1,20 +1,25 @@
-<div class="sign-in-content">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Sign In</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form [formGroup]="form" (submit)="onSubmit()">
-        <mat-form-field>
-          <input matInput placeholder="Username" id="username" name="username" required formControlName="username">
-          <mat-error *ngIf="isInvalidControl(form,'username')">{{ errorMessagesForControl(form,'username')}}</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="password" placeholder="Password" id="password" name="password" required formControlName="password">
-          <mat-error *ngIf="isInvalidControl(form,'password')">{{ errorMessagesForControl(form,'password')}}</mat-error>
-        </mat-form-field>
-        <button mat-raised-button color="primary">Sign In</button>
-      </form>
-    </mat-card-content>
-  </mat-card>
-</div>
+
+<section class="container-sign-in">
+  <div class="sign-in-content" style="height: auto">
+    <mat-card class="card mat-elevation-z5">
+      <mat-card-header>
+        <mat-card-title>Sign In</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <form [formGroup]="form" (submit)="onSubmit()" class="form-container">
+          <mat-form-field>
+            <input matInput placeholder="Username" id="username" name="username" required formControlName="username">
+            <mat-error *ngIf="isInvalidControl(form,'username')">{{ errorMessagesForControl(form,'username')}}</mat-error>
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput type="password" placeholder="Password" id="password" name="password" required formControlName="password">
+            <mat-error *ngIf="isInvalidControl(form,'password')">{{ errorMessagesForControl(form,'password')}}</mat-error>
+          </mat-form-field>
+          <button mat-raised-button color="primary">Sign In</button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</section>
+
+
