--- a/src/app/public/pages/entrepreneur-page/entrepreneur-page.component.css
+++ b/src/app/public/pages/entrepreneur-page/entrepreneur-page.component.css
@@ -2,7 +2,9 @@ mat-toolbar{
   position:relative;
   z-index:5;
 }
-
+.btn-back:hover{
+  color: #003785;
+}
 .sidenav-content{
   padding: 24px;
 }
