--- a/src/app/public/pages/user-page/user-page.component.html
+++ b/src/app/public/pages/user-page/user-page.component.html
@@ -1,15 +1,16 @@
 
 <mat-toolbar class="custom-toolbar">
   <div>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
+
     <span class="toolbar-title">ComPeru</span>
+    @if(isSignedIn && role == 'ROLE_ENTREPRENEUR'){
+      <button class="btn-management" mat-button (click)="onProductsManagement()">Product Management</button>
+    }
   </div>
 
   <input class="search-input" matInput placeholder="Search" >
 
-  <div>
+  <div style="display: flex;align-items: center; gap: 10px">
 <!--    <button mat-icon-button class="example-icon" routerLink="/users/product-page">-->
 <!--      <mat-icon>store_mall_directory</mat-icon>-->
 <!--    </button>-->
@@ -21,13 +22,11 @@
       <mat-icon>shopping_cart</mat-icon>
       <span matBadge="{{ cartItemCount }}" matBadgeOverlap="false"> </span>
     </button>
-    <button mat-icon-button class="orders-customer" aria-label="" routerLink="/users/orders" >
-      <mat-icon> table_chart</mat-icon>
-    </button>
-    <button mat-icon-button class="account-icon" aria-label="" routerLink="/users/auth" >
-      <mat-icon>account_circles</mat-icon>
-    </button>
+<!--    <button mat-icon-button class="orders-customer" aria-label="" routerLink="/users/orders" >-->
+<!--      <mat-icon> table_chart</mat-icon>-->
+<!--    </button>-->
 
+    <app-authentication-section></app-authentication-section>
   </div>
 
 </mat-toolbar>
