--- a/src/app/user-products/components/user-product-detail/user-product-detail.component.html
+++ b/src/app/user-products/components/user-product-detail/user-product-detail.component.html
@@ -72,7 +72,7 @@
                 </mat-icon>
               </div>
             </div>
-            <button mat-button color="accent" class="submit-review-button" style="align-self: start;" (click)="makeReview()">Submit</button>
+            <button class="submit-review-button" style="align-self: start;" (click)="makeReview()">Submit</button>
 
           </div>
 <!--          <input type="text" class="new-review-input" placeholder="Write your review..." />-->
