fix(products): reviews and shipment fixed

--- a/src/app/review-product/components/list-reviews/list-reviews.component.html
+++ b/src/app/review-product/components/list-reviews/list-reviews.component.html
@@ -1,4 +1,4 @@
-    @for (review of reviewDetails; track review.id){
+    @for (review of reviews; track review.id){
       <div style="margin: 25px 0; width: 100%;padding: 15px;border-top:1px solid black;" >
         <div style="display: flex;justify-content: space-between">
           <p style="font-weight: 550;font-size: 16px" class="review-user">{{ review.userName}}</p>
